# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
model/: model_best.nnue
src/Core/: chessboard.cpp  chessboard.h  main.cpp
src/Engine/: analyser.cpp  analyser.h  engine.cpp  engine.h  materialbalance.cpp  materialbalance.h  misc.h  movegenerator.cpp  movegenerator.h  pawnstructure.cpp  pawnstructure.h  piecemobility.cpp  piecemobility.h  positionelement.h  squarecontrol.cpp  squarecontrol.h
src/GUI/: arrow.cpp  button.cpp  button.h  chessboardui.cpp  chessboardui.h  moveentry.cpp  moveentry.h  navbar.cpp  navbar.h  pieceimage.h  promotionbar.cpp  promotionbar.h  roundedrectangle.cpp  roundedrectangle.h
src/Logic/: boardconfig.cpp  boardconfig.h  configchange.cpp  configchange.h  fenreader.cpp  move.cpp  move.h  movelist.cpp  movelist.h  movemask.h  observable.h  piece.cpp  piece.h  progressstack.cpp
src/core/: chessboard.cpp  chessboard.h
src/engine/: bitboards.cpp  bitboards.h  board.cpp  board.h  boardlogic.h  boardspace.cpp  boardspace.h  connectivity.cpp  connectivity.h  engine.cpp  engine.h  eval.cpp  eval.h  evalconfig.h  evaluation.cpp  evaluation.h  evaluationConfig.cpp  evaluationConfig.h  factorsdelivery.cpp  factorsdelivery.h  history.cpp  history.h  interpolation.h  kingsafety.cpp  kingsafety.h  materialbalance.cpp  materialbalance.h  moveGeneration.cpp  moveGeneration.h  moveSelection.cpp  moveSelection.h  movegen.cpp  movegen.h  movegenerator.cpp  movegenerator.h  moveord.cpp  moveord.h  moves.cpp  moves.h  movesel.h  (+25 more)
src/gui/: arrow.h  bluredCircle.cpp  bluredCircle.h  bluredcircle.cpp  bluredcircle.h  boardController.cpp  boardController.h  boardImage.cpp  boardImage.h  boardimg.cpp  boardimg.h  button.cpp  button.h  checkMarker.cpp  checkMarker.h  chessboardui.cpp  chessboardui.h  controller.cpp  controller.h  imagerep.h  (+28 more)
test/: bitboardstest.cpp  boardtest.cpp  evaluationtest.cpp  magicstest.cpp  movegentest.cpp  moveordtest.cpp  searchtest.cpp  seetest.cpp  test.cpp  test.h
testpos/: bugs.txt  game1.pgn  game10.pgn  game2.pgn  game3.pgn  game4.pgn  game5.pgn  game6.pgn  game7.pgn  game8.pgn  game9.pgn  notes.txt  pgn-parsing-test.pgn  pgn1.pgn  pgn2.pgn  pgn3.pgn  search-quality-test.txt  tuningNotes.txt  zobrist-test-1.pgn  zobrist-test-2.pgn
(+68 files in other folders)
